--- a/phantomplaylist/src/Components/App/App.css
+++ b/phantomplaylist/src/Components/App/App.css
@@ -1,38 +1,47 @@
-.App {
+body, 
+html,
+#root {
+  height: 100%;
+}
+
+html {
+  font-size: 20px;
+}
+
+h1 {
+  padding: 0.75rem 0;
+  background-color: rgb(29, 118, 153);
   text-align: center;
+  font-family: 'Koulen';
+  font-size: 1.5rem;
+  color:rgb(255, 255, 255);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h2 {
+  font-family: 'Mukta';
+  font-size: 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App {
+  height: 75%;
+  padding: 0 10% 30% 10%;
+  background-image: url('./phantom_background_img.jpeg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  font-family: 'Mukta';
+  color: rgb(255, 255, 255); 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App-playlist {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen {
+  .App-playlist {
+    align-items: center;
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
-  }
+  
 }
