--- a/phantomplaylist/src/Components/Playlist/Playlist.css
+++ b/phantomplaylist/src/Components/Playlist/Playlist.css
@@ -15,7 +15,7 @@
     border: 0;
     outline: 0;
     background: transparent;
-    border-bottom: 1px solid #6f6f6f;
+    border-bottom: 1px solid #000000;
     font-family: 'Mukta';
     font-size: 1.55rem;
     color: black;
